[package]
name = "tokio-dl-stream-to-disk"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
license = "MIT"
description = "A micro-library for downloading from a URL and streaming it directly to the disk"
homepage = "https://github.com/EFForg/tokio-dl-stream-to-disk"
repository = "https://github.com/EFForg/tokio-dl-stream-to-disk"

[dependencies]
futures-util = { version = "0.3", features = ["io"] }
reqwest = { version = "0.11", features = ["stream"] }
bytes = "1"
tokio-util = { version = "0.6", features = ["io"] }
tokio = { version = "1", features = ["full"] }
