[package]
name = "tokio-dl-stream-to-disk"
version = "1.0.1"
authors = ["William Budington <bill@eff.org>"]
edition = "2021"
license = "MIT"
description = "A micro-library for downloading from a URL and streaming it directly to the disk"
homepage = "https://github.com/EFForg/tokio-dl-stream-to-disk"
repository = "https://github.com/EFForg/tokio-dl-stream-to-disk"

[features]
sha256sum = ["sha2"]

[dependencies]
futures-util = { version = "0.3", features = ["io"] }
reqwest = { version = "0.12", features = ["stream"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1", features = ["full"] }
sha2 = { version = "0.10", optional = true }
